// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.AlertBus UU5.Bricks.AlertBus  onClose() 1`] = `
<AlertBus
  block={false}
  ccrKey={null}
  className={null}
  closeDisabled={false}
  closeTimer={10000}
  colorSchema={null}
  content="Alert in Bus"
  controlled={true}
  disabled={false}
  forceRender={false}
  header="AlertBus-onClose"
  hidden={false}
  id="uuAlertID"
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={[Function]}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.AlertBus UU5.Bricks.AlertBus  onClose() 2`] = `
<AlertBus
  block={false}
  ccrKey={null}
  className={null}
  closeDisabled={false}
  closeTimer={10000}
  colorSchema={null}
  content="Alert in Bus"
  controlled={true}
  disabled={false}
  forceRender={false}
  header="AlertBus-onClose"
  hidden={false}
  id="uuAlertID"
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={[Function]}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.AlertBus block 1`] = `
<Alert
  block={true}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus block 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus block 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus block 4`] = `
<Alert
  block={true}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus ccrKey 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus className 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus my-classname"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeDisabled 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeDisabled 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeDisabled 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeDisabled 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeTimer 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeTimer 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeTimer 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus closeTimer 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 5`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 6`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 7`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 8`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 9`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 10`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 11`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 12`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 13`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 14`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 15`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 16`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 17`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 18`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 19`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 20`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 21`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 22`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 23`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 24`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 25`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 26`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 27`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 28`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 29`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 30`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 31`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 32`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 33`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 34`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 35`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 36`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 37`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema 38`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus controlled 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus controlled 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus controlled 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus controlled 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus default props 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus disabled 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus disabled 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus disabled 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus disabled 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus forceRender 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus forceRender 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus forceRender 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus forceRender 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus hidden 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus hidden 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus hidden 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus hidden 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus id 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="myId-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus mainAttrs 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus name 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 5`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 6`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 7`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 8`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 9`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 10`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 11`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 12`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 13`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 14`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel 15`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel 16`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel 17`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel 18`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel 19`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel 20`] = `""`;

exports[`UU5.Bricks.AlertBus noIndex 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus uu5-noindex"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus noIndex 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus noIndex 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus noIndex 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus uu5-noindex"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus position 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="left"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus position 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus position 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus position 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="right"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus position 5`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="right"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus position 6`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus pureRender 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus pureRender 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus pureRender 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus pureRender 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus selected 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus selected 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus selected 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus selected 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus style 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus style 2`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus style 3`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus style 4`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.AlertBus tooltip 1`] = `
<Alert
  block={false}
  className="uu5-bricks-alert-bus"
  closeDisabled={false}
  closeTimer={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-alert"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClose={null}
  onCloseAfter={null}
  onCloseBefore={null}
  position="center"
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
  underline={false}
/>
`;
